--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,8 +58,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.OMNI_RELEASE_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./aish-amd64
-        asset_name: aish-amd64
+        asset_path: ./aish-darwin-amd64
+        asset_name: aish-darwin-amd64
         asset_content_type: application/octet-stream
 
     - name: Upload Release Asset for Mac arm64
@@ -68,6 +68,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.OMNI_RELEASE_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./aish-arm64
-        asset_name: aish-arm64
+        asset_path: ./aish-darwin-arm64
+        asset_name: aish-darwin-arm64
         asset_content_type: application/octet-stream
