--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Add pre-release tag to the version
       id: version
-      run: semver bump prerel alpha.. ${{ steps.latest_release.outputs.result }}
+      run: echo ::set-output name=version::$(semver bump prerel alpha.. ${{ steps.latest_release.outputs.result }})
       # This uses https://github.com/fsaintjacques/semver-tool to modify the version
       # by adding the "pre" label followed by the current time
 
@@ -57,7 +57,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.OMNI_RELEASE_TOKEN }}
       with:
         tag_name: "${{steps.version.outputs.result}}"
-        release_name: Release "${{steps.version.outputs.result}}"
+        release_name: Release ${{steps.version.outputs.result}}
         body: |
           Changes in this release:
           - Added new feature
