--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,8 +40,6 @@ jobs:
     - name: Add pre-release tag to the version
       id: version
       run: echo ::set-output name=version::$(semver bump prerel alpha.. ${{ steps.latest_release.outputs.result }})
-      # This uses https://github.com/fsaintjacques/semver-tool to modify the version
-      # by adding the "pre" label followed by the current time
 
     - name: Build
       run: |
@@ -56,8 +54,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.OMNI_RELEASE_TOKEN }}
       with:
-        tag_name: "${{steps.version.outputs.result}}"
-        release_name: Release ${{steps.version.outputs.result}}
+        tag_name: ${{steps.version.outputs.version}}
+        release_name: Prerelease ${{steps.version.outputs.version}}
         body: |
           Changes in this release:
           - Added new feature
