--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,10 +15,10 @@ jobs:
       with:
           fetch-depth: 0
 
-    - name: Setup Go
-      uses: actions/setup-go@v2
+    - name: Setup Golang with cache
+      uses: magnetikonline/action-golang-cache@v4
       with:
-        go-version: '1.19.2'
+        go-version-file: go.mod
 
     - name: Install semver-tool
       run: |
@@ -54,8 +54,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.OMNI_RELEASE_TOKEN }}
       with:
-        tag_name: ${{steps.version.outputs.version}}
-        release_name: Prerelease ${{steps.version.outputs.version}}
+        tag_name: v${{steps.version.outputs.version}}
+        release_name: Prerelease v${{steps.version.outputs.version}}
         body: |
           Changes in this release:
           - Added new feature
